--- a/BetterLockers.csproj
+++ b/BetterLockers.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<PlatformTarget>x64</PlatformTarget>
+	<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
